Fix: Fix canvas-wrap-position (#1352)

--- a/src/app/ui/widgets/LaserVisualizer/styles.styl
+++ b/src/app/ui/widgets/LaserVisualizer/styles.styl
@@ -90,12 +90,11 @@ $visualizer-padding = 10px
 }
 
 .canvas-content {
-    height: calc(100vh - 61px);
     position: absolute;
     top: 0;
     right: 0;
     bottom: 32px;
-    left: 0;
+    left: 64px;
 }
 .bottom-left
     z-index: $z-index-float
