--- a/src/app/ui/widgets/styles.styl
+++ b/src/app/ui/widgets/styles.styl
@@ -12,6 +12,7 @@ $bottom-bar-height = 0px
 .visualizer-content-wrapper
     position: relative!important;
     padding: 0!important;
+    background-color: #f5f5f7
 .separator
     display: block
     margin: 10px 0
